--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: My Projects
 description: This is my GitHub Pages site.
-theme: minima
+theme: dinky
 baseurl: ""
 url: "https://ZiadMotagaly.github.io"
