--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: My Projects
 description: This is my GitHub Pages site.
 theme: dinky
 baseurl: ""
-url: "https://ZiadMotagaly.github.io"
+url: "https://ziadmotagaly.github.io/"
