--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: My Portfolio
 description: Welcome to my GitHub Pages site.
-theme: cayman
+remote_theme: pages-themes/architect@v0.2.0
 baseurl: "" # Leave blank unless the site is under a subpath
 url:  "https://ziadmotagaly.github.io/"
 
@@ -15,9 +15,14 @@ navbar:
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
+
 
 # Exclude unnecessary files from the site build
 exclude:
   - README.md
   - LICENSE
+
+
+
 
