--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: My Portfolio
 description: Welcome to my GitHub Pages site.
-remote_theme: pages-themes/architect@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 baseurl: "" # Leave blank unless the site is under a subpath
 url:  "https://ziadmotagaly.github.io/"
 
@@ -15,7 +15,11 @@ navbar:
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-feed
+  - jekyll-remote-theme
+
+markdown: kramdown
+highlighter: rouge
 
 
 # Exclude unnecessary files from the site build
