--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,12 @@
 title: My Portfolio
 description: Welcome to my GitHub Pages site.
+
+sass:
+  style: compressed
+  load_paths:
+    - _sass
+    - assets/css
+    
 theme: minima
 baseurl: "" # Leave blank unless the site is under a subpath
 url:  "https://ziadmotagaly.github.io/"
