--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: My Portfolio
 description: Welcome to my GitHub Pages site.
 
     
-theme: jekyll-theme-minima
+theme: jekyll-theme-minimal
 baseurl: "" # Leave blank unless the site is under a subpath
 url:  "https://ziadmotagaly.github.io/"
 
